--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,19 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "dingo/api": "^3.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "itsgoingd/clockwork": "^4.1",
         "laravel/framework": "^8.0",
         "laravel/jetstream": "^1.2",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
-        "livewire/livewire": "^2.0"
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "livewire/livewire": "^2.0",
+        "spatie/laravel-fractal": "^5.8",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
